--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,8 +3,10 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
   	android:layout_height="fill_parent">
-        <ListView android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/ListView01"></ListView>
+    <ListView android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="fill_parent" android:id="@+id/ListView01"></ListView>
    
-    <LinearLayout android:layout_width="fill_parent" android:id="@+id/linearLayout1" android:layout_weight="1" android:layout_height="32pt" android:background="@drawable/bottom"></LinearLayout>
+    <include android:id="@+id/menu" layout="@layout/menu">
+        
+    </include>
 
 </LinearLayout>
